use Boolean.valueOf()